change columns on report card pg 1

--- a/docs/report_card_template.qmd
+++ b/docs/report_card_template.qmd
@@ -6,7 +6,7 @@ format:
     margin-right: "0.5in"
     margin-top: "0in"
     margin-bottom: "0.5in"
-    fontsize: "8pt"
+    fontsize: "9pt"
     linestretch: 1
     indent: true
     include-in-header: template.tex    
@@ -37,33 +37,14 @@ devtools::load_all()
 
 \section{Spring 2026}
 
-:::: {layout="[ [0.6, 0.025, 0.375], [0.6, 0.025, 0.375]] "}
+::::: {layout="[ [0.6, 0.05, 0.45]] "}
 
-::: {}
+:::: {}
+:::{}
 ![](`r params$img1`)
 :::
 
-::: {}
-\hfill
-:::
-
-::: {}
-\section{Key Points from the Mid-Atlantic Risk Assessment}
-
-\raggedright
-<!-- maybe this is being centered because it's the only section without a header? -->
-In the [2025 Mid-Atlantic EAFM Risk Assessment Update](https://static1.squarespace.com/static/511cdc7fe4b00307a2628ac6/t/67d45b1680e8654ecaf1b98e/1741970199497/b_Draft+MAB_RiskAssess_2025.pdf), longfin squid scored moderate-high risk in the following elements:
-
-- Moderate-high risk to the stock due to:
-  - High potential for and observed distribution shifts  
-- Moderate-high risk to the commercial fishery due to:
-  - Risk of not achieving optimum yield due to interactions with non-Council managed species
-  - Occasional recent changes in regulations; moderate (3-4) recreational regulation differences across states
-  - Regular discards and incidental catch but managed; moderate discard mortality
-:::
-
-
-::: {}
+:::{}
 \section{Key Findings from the Life History Working Group}
 
 \subsection{Lifespan and aging}
@@ -78,16 +59,34 @@ In the [2025 Mid-Atlantic EAFM Risk Assessment Update](https://static1.squarespa
 \subsection{Natural mortality}
 - Potential relationships between natural morality and longfin inshore squid differ by age and life stage; however, quantifying these relationships is complex and is dependent on accurate age and life cycle estimates. It is likely that multiple natural mortality approximations will need to be developed to match lifespan hypotheses. Intraspecific predation impacts natural mortality in longfin squid, but methods are not currently available to directly quantify
 :::
+::::
 
-::: {}
+::::{}
 \hfill
+::::
+
+::::{}
+:::{}
+\section{Key Points from the Mid-Atlantic Risk Assessment}
+
+\raggedright
+<!-- maybe this is being centered because it's the only section without a header? -->
+In the [2025 Mid-Atlantic EAFM Risk Assessment Update](https://static1.squarespace.com/static/511cdc7fe4b00307a2628ac6/t/67d45b1680e8654ecaf1b98e/1741970199497/b_Draft+MAB_RiskAssess_2025.pdf), longfin squid scored moderate-high risk in the following elements:
+
+- Moderate-high risk to the stock due to:
+  - High potential for and observed distribution shifts  
+- Moderate-high risk to the commercial fishery due to:
+  - Risk of not achieving optimum yield due to interactions with non-Council managed species
+  - Occasional recent changes in regulations; moderate (3-4) recreational regulation differences across states
+  - Regular discards and incidental catch but managed; moderate discard mortality
 :::
 
-::: {}
+:::{}
 ![](`r params$img2`)
 :::
-
 ::::
+
+:::::
 
 \newpage
 
