change font size to 9.5

--- a/docs/template.tex
+++ b/docs/template.tex
@@ -1,4 +1,5 @@
 \usepackage[pages=some]{background}
+\usepackage[fontsize=9.5pt]{fontsize}
 
 \RedeclareSectionCommand[font=\centering\large]{section}
 \RedeclareSectionCommand[
