--- a/docs/report_card_template.qmd
+++ b/docs/report_card_template.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Longfin Inshore Squid (\\protect\\textit{Doryteuthis pealeii}) \\protect\\newline Ecosystem & Socioeconomic Profile Report Card"
+title: "Longfin Inshore Squid (\\protect\\textit{Doryteuthis pealeii}) \\linebreak Ecosystem & Socioeconomic Profile Report Card"
 format: 
   pdf:
     margin-left: "0.25in"
@@ -26,24 +26,24 @@ knitr::opts_chunk$set(echo = FALSE)
 # here::i_am("inst/esp_template/06_docs/report card pg 1.qmd")
 devtools::load_all()
 ``` 
+
 \backgroundsetup{
   scale=1,
   angle=0,
   opacity=0,
   contents={\includegraphics[width=\paperwidth,height=\paperheight]{bg_pg1.jpg}}
  }
-\BgThispage
+\BgThispage 
 
+\vspace{-0.5cm}
+\section{Spring 2026} 
 
-<!-- \section{Longfin Inshore Squid (Doryteuthis pealeii) Ecosystem & Socioeconomic Profile Report Card} -->
-
-
-::::: {layout="[ [0.575, 0.025, 0.4]] "}
+::::: {layout="[[0.575, 0.025, 0.4]] "}
 
 :::: {}
 
 :::{}
-\vspace{1.0cm}
+\vspace{0.5cm}
 \raggedright
 \section{Key Findings from the Life History Working Group}
 
@@ -66,7 +66,7 @@ Consideration of the hypothesis of a winter cohort spawning south of Hatteras in
 Although natural mortality is expected to be age-dependent, lack of accurate age data makes further study difficult. Multiple natural mortality approximations could be developed to match lifespan hypotheses. Intraspecific predation impacts natural mortality, but there is no available data to quantify the amount of mortality this causes.
 :::
 
-\vspace{1.0cm}
+\vspace{0.5cm}
 
 :::{}
 ![](`r params$img1`)
@@ -80,12 +80,12 @@ Although natural mortality is expected to be age-dependent, lack of accurate age
 
 ::::{}
 :::{}
-\vspace{1.0cm}
+\vspace{0.5cm}
 \section{Longfin Squid Age Frequency from SQUIBS dataset}
 ![](`r params$img3`)
 :::
 
-\vspace{0.5cm}
+\vspace{0.25cm}
 
 :::{}
 \section{Key Points from the Mid-Atlantic Risk Assessment}
@@ -103,7 +103,7 @@ In the [2025 Mid-Atlantic EAFM Risk Assessment Update](https://static1.squarespa
 
 :::
 
-\vspace{0.5cm}
+\vspace{0.25cm}
 
 :::{}
 ![](`r params$img2`)
@@ -117,7 +117,7 @@ In the [2025 Mid-Atlantic EAFM Risk Assessment Update](https://static1.squarespa
 \backgroundsetup{
   contents={\includegraphics[width=\paperwidth,height=\paperheight]{bg_pg2.jpg}}
   }
-\BgThispage
+\BgThispage 
 <!-- not sure why this doesn't work -->
 
 \newgeometry{top=0.25in, left=0.25in, right=0.25in, bottom=0.25in}
@@ -131,7 +131,8 @@ data <- readxl::read_excel(params$tbl_file) |>
 
 ::: {}
 ```{r}
-NEesp2::rpt_card_table(data)
+NEesp2::rpt_card_table(data) |> 
+  flextable::font(i = 1:5, j = 1:3, fontname='Times New Roman')
 ```
 
 \section{Research Recommendations}
