--- a/docs/template.tex
+++ b/docs/template.tex
@@ -1,4 +1,6 @@
 \usepackage[pages=some]{background}
+% \usepackage{blindtext}
+% \usepackage[fontsize=9.5pt]{fontsize}
 
 \RedeclareSectionCommand[font=\centering\large]{section}
 \RedeclareSectionCommand[
