--- a/docs/report_card_template.tex
+++ b/docs/report_card_template.tex
@@ -4,21 +4,12 @@
 \PassOptionsToPackage{dvipsnames,svgnames,x11names}{xcolor}
 %
 \documentclass[
-<<<<<<< HEAD
-  8.5pt,
-  letterpaper,
-]{article}
-
-\usepackage{amsmath,amssymb}
-\usepackage{lmodern}
-=======
   9pt,
   letterpaper,
   DIV=11,
   numbers=noendperiod]{scrartcl}
 
 \usepackage{amsmath,amssymb}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 \usepackage{setspace}
 \usepackage{iftex}
 \ifPDFTeX
@@ -30,13 +21,10 @@
   \defaultfontfeatures{Scale=MatchLowercase}
   \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
 \fi
-<<<<<<< HEAD
-=======
 \usepackage{lmodern}
 \ifPDFTeX\else  
     % xetex/luatex font selection
 \fi
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 % Use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \IfFileExists{microtype.sty}{% use microtype if available
@@ -44,11 +32,7 @@
   \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
 \usepackage{xcolor}
-<<<<<<< HEAD
-\usepackage[lmargin=0.25in,rmargin=0.25in,tmargin=0in,bmargin=0.5in]{geometry}
-=======
 \usepackage[lmargin=0.25in,rmargin=0.25in,tmargin=0in,bmargin=0.25in]{geometry}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 \setlength{\emergencystretch}{3em} % prevent overfull lines
 \setcounter{secnumdepth}{-\maxdimen} % remove section numbering
 % Make \paragraph and \subparagraph free-standing
@@ -87,14 +71,9 @@
 \def\fps@figure{htbp}
 \makeatother
 
-<<<<<<< HEAD
 \usepackage[pages=some]{background}
 % \usepackage{blindtext}
-% \usepackage[fontsize=9.5pt]{fontsize}
-=======
-
 \usepackage[fontsize=9.5pt]{fontsize}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 
 \RedeclareSectionCommand[font=\centering\large]{section}
 \RedeclareSectionCommand[
@@ -123,14 +102,7 @@
 \usepackage{hyperref}
 \usepackage{float}
 \usepackage{wrapfig}
-<<<<<<< HEAD
-=======
 \KOMAoption{captions}{tableheading}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
-\makeatletter
-\makeatother
-\makeatletter
-\makeatother
 \makeatletter
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \AtBeginDocument{%
@@ -167,30 +139,16 @@
 \newcommand*\listoflistings{\listof{codelisting}{List of Listings}}
 \makeatother
 \makeatletter
+\makeatother
+\makeatletter
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-\makeatletter
-<<<<<<< HEAD
-\@ifpackageloaded{tcolorbox}{}{\usepackage[many]{tcolorbox}}
-=======
-\@ifpackageloaded{tcolorbox}{}{\usepackage[skins,breakable]{tcolorbox}}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
-\makeatother
-\makeatletter
-\@ifundefined{shadecolor}{\definecolor{shadecolor}{rgb}{.97, .97, .97}}
-\makeatother
-\makeatletter
-\makeatother
-<<<<<<< HEAD
-=======
-\makeatletter
-\makeatother
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
-\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+\usepackage{bookmark}
+
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
@@ -203,21 +161,12 @@
   pdfcreator={LaTeX via pandoc}}
 
 \title{Longfin Inshore Squid (\protect\textit{Doryteuthis pealeii})
-<<<<<<< HEAD
-\protect\newline Ecosystem \& Socioeconomic Profile Report Card}
-=======
 \linebreak Ecosystem \& Socioeconomic Profile Report Card}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 \author{}
 \date{}
 
 \begin{document}
 \maketitle
-<<<<<<< HEAD
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, interior hidden, enhanced, breakable, sharp corners, boxrule=0pt, frame hidden]}{\end{tcolorbox}}\fi
-=======
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, interior hidden, enhanced, boxrule=0pt, sharp corners, breakable, frame hidden]}{\end{tcolorbox}}\fi
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 
 \setstretch{1}
 \backgroundsetup{
@@ -228,28 +177,14 @@
  }
 \BgThispage
 
-<<<<<<< HEAD
-\vspace{-2.0cm}
-
+\vspace{-2cm}
 \section{Spring 2026}
 
-\vspace{0.75cm}
-
-=======
-\vspace{-0.5cm}
-\section{Spring 2026}
-
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 \begin{figure}
 
-\begin{minipage}[t]{0.57\linewidth}
+\begin{minipage}{0.57\linewidth}
 
-{\centering 
-
-<<<<<<< HEAD
-=======
 \vspace{0.5cm}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 \raggedright
 \section{Key Findings from the Life History Working Group}
 
@@ -259,7 +194,6 @@ Growth is estimated to be 1 statolith ring/day, per multiple literature
 sources. Participants at the longfin squid summit estimated a maximum
 age of 15 months. Literature review supports a lifespan of less than 1
 year. Recent (2024) statolith aging indicates maximum ages of 7 months
-<<<<<<< HEAD
 for females and 8.6 months for males (right) from squid caught in the
 fishery.
 
@@ -276,15 +210,11 @@ in females increases from Fall (1) -\textgreater{} Winter (2)
 -\textgreater{} Spring (3). The highest percentage of mature male squid
 were caught in spring and summer. No stage 4 females and very few stage
 1 males were caught.
-=======
-for females and 8.6 months for males (right).
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 
 \vspace{0.25cm}
 
 \subsection{Migration and movement dynamics}
 
-<<<<<<< HEAD
 Literature review and recent work by Dave Richardson suggests the
 possibility of a winter cohort that hatches south of Cape Hatteras and
 subsequently migrates onto the Northeast U.S. continental shelf. Fishery
@@ -293,15 +223,6 @@ squid from waters south of Hatteras through southern New England, with
 the smallest squid detected further south. The Gulf Stream and warm core
 rings may facilitate the recruitment transport of juvenile squid
 (Richardson WP).
-=======
-Literature suggests the possibility of a winter cohort that hatches
-south of Cape Hatteras and subsequently migrates onto the Northeast U.S.
-continental shelf. Fishery observations describe a spatial gradient of
-1-6 cm mantle length (ML) squid from waters south of Hatteras through
-southern New England, with the smallest squid detected further south.
-The Gulf Stream and warm core rings may facilitate the recruitment
-transport of juvenile squid (Richardson WP).
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 
 \vspace{0.25cm}
 
@@ -322,48 +243,26 @@ mortality approximations could be developed to match lifespan
 hypotheses. Intraspecific predation impacts natural mortality, but there
 is no available data to quantify the amount of mortality this causes.
 
-<<<<<<< HEAD
-\vspace{1.0cm}
-
-\includegraphics{/home/atyrell/SOE_ESP_Data/longfinESP/images/0521_conceptual model.png}
-=======
 \vspace{0.5cm}
 
-\includegraphics{C:/Users/stephanie.owen/Documents/longfinESP/images/conceptual_model.png}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
-
-}
+\includegraphics{C:/Users/abigail.tyrell/Documents/code/longfinESP/images/0521_conceptual_model.png}
 
 \end{minipage}%
 %
-\begin{minipage}[t]{0.03\linewidth}
-
-{\centering 
+\begin{minipage}{0.03\linewidth}
 
 \hfill
 
-}
-
 \end{minipage}%
 %
-\begin{minipage}[t]{0.40\linewidth}
+\begin{minipage}{0.40\linewidth}
 
-{\centering 
-
-<<<<<<< HEAD
-\section{Longfin Squid Age Frequency from SQUIBS dataset}
-
-\includegraphics{/home/atyrell/SOE_ESP_Data/longfinESP/images/squibs_data.png}
-
-\vspace{1.0cm}
-=======
 \vspace{0.5cm}
 \section{Longfin Squid Age Frequency from SQUIBS dataset}
 
-\includegraphics{C:/Users/stephanie.owen/Documents/longfinESP/images/squibs_data.png}
+\includegraphics{C:/Users/abigail.tyrell/Documents/code/longfinESP/images/squibs_data.png}
 
 \vspace{0.25cm}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 
 \section{Key Points from the Mid-Atlantic Risk Assessment}
 
@@ -399,7 +298,6 @@ moderate-high risk in the following elements:
     Regular, managed discards and incidental catch; moderate discard
     mortality
   \end{itemize}
-<<<<<<< HEAD
 \item
   Moderate-high risk to commercial fishery value
 
@@ -410,8 +308,7 @@ moderate-high risk in the following elements:
     revenue and revenue, cost, and profitability indice findings
   \end{itemize}
 \item
-  Moderate-high risk to Commercial Fishery Resilience
-  \textless80\textgreater\textless93\textgreater{} Fleet Diversity
+  Moderate-high risk to Commercial Fishery Resilience -- Fleet Diversity
 
   \begin{itemize}
   \tightlist
@@ -421,22 +318,13 @@ moderate-high risk in the following elements:
   \end{itemize}
 \end{itemize}
 
-\vspace{0.5cm}
-
-\includegraphics{/home/atyrell/SOE_ESP_Data/longfinESP/images/risk_chart.png}
-=======
-\end{itemize}
-
 \vspace{0.25cm}
 
-\includegraphics{C:/Users/stephanie.owen/Documents/longfinESP/images/risk_chart.png}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
-
-}
+\includegraphics{C:/Users/abigail.tyrell/Documents/code/longfinESP/images/risk_chart.png}
 
 \end{minipage}%
 
-\end{figure}
+\end{figure}%
 
 \newpage
 
@@ -459,93 +347,56 @@ moderate-high risk in the following elements:
 
 \providecommand{\ascline}[3]{\noalign{\global\arrayrulewidth #1}\arrayrulecolor[HTML]{#2}\cline{#3}}
 
-<<<<<<< HEAD
-\begin{longtable}[c]{|p{0.90in}|p{0.75in}|p{3.00in}|p{3.00in}}
-=======
 \begin{longtable*}[c]{|p{0.90in}|p{0.75in}|p{3.00in}|p{3.00in}}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 
 
 
 \ascline{0.75pt}{666666}{1-4}
 
-<<<<<<< HEAD
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{\textbf{Indicator\ Units}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{\textbf{Status\ In\ 2024}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{\textbf{Implications}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{\textbf{Time\ Series}}}}} \\
-=======
 \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{\textbf{Indicator\ Units}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{\textbf{Status\ In\ 2024}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{\textbf{Implications}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{\textbf{Time\ Series}}}}} \\
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 
 \ascline{0.75pt}{666666}{1-4}\endfirsthead 
 
 \ascline{0.75pt}{666666}{1-4}
 
-<<<<<<< HEAD
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{\textbf{Indicator\ Units}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{\textbf{Status\ In\ 2024}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{\textbf{Implications}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{\textbf{Time\ Series}}}}} \\
-=======
 \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{\textbf{Indicator\ Units}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{\textbf{Status\ In\ 2024}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{\textbf{Implications}}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{\textbf{Time\ Series}}}}} \\
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 
 \ascline{0.75pt}{666666}{1-4}\endhead
 
 
 
-<<<<<<< HEAD
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Commercial\ landings\ (millions\ of\ lbs.)
-}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{\linebreak }}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Near\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{An\ increase\ in\ landings\ since\ 2020\ but\ decrease\ in\ number\ of\ vessels\ could\ indicate\ targeted\ trips\ in\ specific\ times\ of\ year\ and\ fishers\ targeting\ other\ species\ when\ longfin\ are\ not\ available.\ High\ variability\ in\ landings\ is\ common\ for\ squid\ fisheries,\ and\ 2024\ commercial\ landings\ fall\ within\ the\ long\ term\ mean.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-1.png}} \\
-=======
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Commercial\ landings\ (millions\ of\ lbs.)
-}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{\linebreak }}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Above\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Add\ implications\ here\ (3-5\ sentences)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-1.png}} \\
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Commercial\ landings\ (millions\ of\ lbs.)
+}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{\linebreak }}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Near\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{An\ increase\ in\ landings\ since\ 2020\ but\ decrease\ in\ number\ of\ vessels\ could\ indicate\ targeted\ trips\ in\ specific\ times\ of\ year\ and\ fishers\ targeting\ other\ species\ when\ longfin\ are\ not\ available.\ High\ variability\ in\ landings\ is\ common\ for\ squid\ fisheries,\ and\ 2024\ commercial\ landings\ fall\ within\ the\ long\ term\ mean.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-1.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
 
 
-<<<<<<< HEAD
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Number\ of\ commercial\ vessels\ (\#)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Number\ of\ commercial\ vessels\ has\ been\ steadily\ decreasing\ since\ around\ 2000\ consistent\ with\ decreasing\ fleet\ diversity\ and\ continued\ risk\ to\ fishery\ resilience\ (MAFMC\ FID).}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-2.png}} \\
-=======
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Number\ of\ commercial\ vessels\ (\#)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Add\ implications\ here\ (3-5\ sentences)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-2.png}} \\
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Number\ of\ commercial\ vessels\ (\#)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Number\ of\ commercial\ vessels\ has\ been\ steadily\ decreasing\ since\ around\ 2000\ consistent\ with\ decreasing\ fleet\ diversity\ and\ continued\ risk\ to\ fishery\ resilience\ (MAFMC\ FID).}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-2.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
 
 
-<<<<<<< HEAD
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Commercial\ revenue\ (2024\ USD)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Average\ Longfin\ ex-vessel\ prices\ in\ 2024\ increased\ slightly\ from\ 2023\ (+10\%),\ but\ commercial\ revenue\ has\ decreased\ from\ 2023\ which\ is\ most\ likely\ driven\ by\ a\ an\ overall\ decrease\ in\ landings\ by\ 23\%\ (MAFMC\ FID).}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-3.png}} \\
-=======
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Commercial\ revenue\ (2023\ USD)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Near\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Add\ implications\ here\ (3-5\ sentences)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-3.png}} \\
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Commercial\ revenue\ (2024\ USD)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Average\ Longfin\ ex-vessel\ prices\ in\ 2024\ increased\ slightly\ from\ 2023\ (+10\%),\ but\ commercial\ revenue\ has\ decreased\ from\ 2023\ which\ is\ most\ likely\ driven\ by\ a\ an\ overall\ decrease\ in\ landings\ by\ 23\%\ (MAFMC\ FID).}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-3.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
 
 
-<<<<<<< HEAD
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Western\ Gulf\ Stream\ Index\ (shift\ in\ the\ western\ part\ of\ the\ Gulf\ Stream\ North\ wall:\ mean\ position:\ >0\ =\ more\ northerly,\ <0\ =\ more\ southerly)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Above\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Since\ the\ mid-1990s,\ north\ and\ westward\ shifts\ in\ the\ Gulf\ Stream\ have\ resulted\ in\ an\ increase\ in\ warm\ core\ rings\ and\ deep\ water,\ high\ salinity\ heat\ waves.\ The\ position\ of\ the\ Gulf\ Stream\ influences\ seasonal\ temperature\ and\ water\ mass\ mixing\ dynamics\ that\ affect\ longfin\ squid\ habitat\ suitability,\ temperature-dependent\ growth,\ and\ prey\ availability.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-4.png}} \\
-=======
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Western\ Gulf\ Stream\ Index\ (shift\ in\ the\ western\ part\ of\ the\ Gulf\ Stream\ North\ wall:\ mean\ position:\ >0\ =\ more\ northerly,\ <0\ =\ more\ southerly)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Above\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Since\ the\ mid-1990s,\ north\ and\ westward\ shifts\ in\ the\ Gulf\ Stream\ have\ resulted\ in\ an\ increase\ in\ warm\ core\ rings\ and\ deep\ water,\ high\ salinity\ heat\ waves.\ The\ position\ of\ the\ Gulf\ Stream\ influences\ seasonal\ temperature\ and\ water\ mass\ mixing\ dynamics\ that\ affect\ longfin\ squid\ habitat\ suitability,\ temperature-dependent\ growth,\ and\ prey\ availability.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-4.png}} \\
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Western\ Gulf\ Stream\ Index\ (shift\ in\ the\ western\ part\ of\ the\ Gulf\ Stream\ North\ wall:\ mean\ position:\ >0\ =\ more\ northerly,\ <0\ =\ more\ southerly)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Above\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Since\ the\ mid-1990s,\ north\ and\ westward\ shifts\ in\ the\ Gulf\ Stream\ have\ resulted\ in\ an\ increase\ in\ warm\ core\ rings\ and\ deep\ water,\ high\ salinity\ heat\ waves.\ The\ position\ of\ the\ Gulf\ Stream\ influences\ seasonal\ temperature\ and\ water\ mass\ mixing\ dynamics\ that\ affect\ longfin\ squid\ habitat\ suitability,\ temperature-dependent\ growth,\ and\ prey\ availability.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{report_card_template_files/figure-pdf/unnamed-chunk-2-4.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
 
 
-<<<<<<< HEAD
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Bottom\ temperature\ in\ MAB\ and\ SNE(°C)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Above\ long\ term\ average\ (Fall);\ near\ long\ term\ average\ (Spring)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{DejaVu Sans}{Longfin\ squid\ seasonal\ distribution\ and\ growth\ rates\ are\ likely\ temperature\ dependent,\ avoiding\ water\ <8°C.\ Inshore\ temperature\ thresholds\ (around\ 14°C)\ initiate\ migration\ of\ squid\ from\ offshore\ overwintering\ habitats.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1.5in]{report_card_template_files/figure-pdf/unnamed-chunk-2-5.png}} \\
-=======
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Bottom\ temperature\ in\ MAB\ and\ SNE(°C)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Above\ long\ term\ average\ (Fall);\ near\ long\ term\ average\ (Spring)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Longfin\ squid\ seasonal\ distribution\ and\ growth\ rates\ are\ likely\ temperature\ dependent,\ avoiding\ water\ <8°C.\ Inshore\ temperature\ thresholds\ (around\ 14°C)\ initiate\ migration\ of\ squid\ from\ offshore\ overwintering\ habitats.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1.5in]{report_card_template_files/figure-pdf/unnamed-chunk-2-5.png}} \\
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Bottom\ temperature\ in\ MAB\ and\ SNE(°C)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Above\ long\ term\ average\ (Fall);\ near\ long\ term\ average\ (Spring)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Arial}{Longfin\ squid\ seasonal\ distribution\ and\ growth\ rates\ are\ likely\ temperature\ dependent,\ avoiding\ water\ <8°C.\ Inshore\ temperature\ thresholds\ (around\ 14°C)\ initiate\ migration\ of\ squid\ from\ offshore\ overwintering\ habitats.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1.5in]{report_card_template_files/figure-pdf/unnamed-chunk-2-5.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
 
 
-<<<<<<< HEAD
-\end{longtable}
-=======
 \end{longtable*}
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 
 
 
@@ -583,12 +434,8 @@ model/species distribution model.
 \vspace{0.25cm}
 
 -Evaluate ecosystem and socioeconomic influences on longfin squid in
-<<<<<<< HEAD
 reference to the stock assessment and fisheries management
 considerations.
-=======
-reference to the stock assessment and fisheries management consideratio
->>>>>>> 0324c0dd673a4473a6c11ce2d1afb0ef56d69683
 
 \vspace{2.0cm}
 
